k8s/01-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: crime
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata: { labels: { app: postgres } }
    spec:
      containers:
        - name: db
          image: postgres:14
          ports: [ { containerPort: 5432 } ]
          volumeMounts:
            - { name: pg-data, mountPath: /var/lib/postgresql/data }
      volumes:
        - name: pg-data
          persistentVolumeClaim: { claimName: pg-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: crime
spec:
  selector: { app: postgres }
  ports: [ { port: 5432, targetPort: 5432 } ]
