k8s/02-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: crime
spec:
  replicas: 1
  selector: { matchLabels: { app: user } }
  template:
    metadata: { labels: { app: user } }
    spec:
      containers:
        - name: user
          image: crimewatcher/user-service:0.1
          ports: [ { containerPort: 8081 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: crime
spec:
  selector: { app: user }
  ports: [ { port: 8081, targetPort: 8081 } ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  namespace: crime
spec:
  replicas: 1
  selector: { matchLabels: { app: report } }
  template:
    metadata: { labels: { app: report } }
    spec:
      containers:
        - name: report
          image: crimewatcher/report-service:0.1
          ports: [ { containerPort: 8082 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: crime
spec:
  selector: { app: report }
  ports: [ { port: 8082, targetPort: 8082 } ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: crime
spec:
  replicas: 1
  selector: { matchLabels: { app: analytics } }
  template:
    metadata: { labels: { app: analytics } }
    spec:
      containers:
        - name: analytics
          image: crimewatcher/analytics-service:0.1
          ports: [ { containerPort: 8083 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: crime
spec:
  selector: { app: analytics }
  ports: [ { port: 8083, targetPort: 8083 } ]
